# Radial-Basis-Function

./: LICENCE  LICENSE  README.md  pyproject.toml
radial_basis_function/: __init__.py  funcoes_auxiliares.py  pseudo_inversa.py  rbf.py
