[tool.poetry]
name = "radial-basis-function"
version = "0.1.0"
description = "Radial Basis Function e Multiplicação de Matriz Pseudo-Inversa, para modelos de Regressão e Multi-Classificatórios."
authors = ["Victor Venites <contato@victorvenites.com>"]
readme = "README.md"
packages = [{include = "radial_basis_function"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/seu-usuario/seu-repositorio"
