[tool.poetry]
name = "radial-basis-function"
version = "0.3.0"
description = "Radial Basis Function e Multiplicação de Matriz Pseudo-Inversa, para modelos de Regressão e Multi-Classificatórios."
authors = ["Victor Venites <contato@victorvenites.com>"]
maintainers = ["Victor Venites <contato@victorvenites.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "radial_basis_function"}]
homepage = "https://github.com/VictorVenites/Radial-Basis-Function"
documentation = "https://github.com/VictorVenites/Radial-Basis-Function"
keywords = ["rbf", "Radial Basis Function", "Pseudo-Inverse Matrix", "Matriz Pseudo-Inversa", "Victor Venites"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/VictorVenites/Radial-Basis-Function"

