[tool.poetry]
name = "radial-basis-function"
version = "0.4.0"
description = "Radial Basis Function e Multiplicação de Matriz Pseudo-Inversa, para modelos de Regressão e Multi-Classificatórios."
authors = ["Victor Venites <contato@victorvenites.com>"]
maintainers = ["Victor Venites <contato@victorvenites.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "radial_basis_function"}]
homepage = "https://github.com/VictorVenites/Radial-Basis-Function"
documentation = "https://github.com/VictorVenites/Radial-Basis-Function"
keywords = ["rbf", "Radial Basis Function", "Pseudo-Inverse Matrix", "Matriz Pseudo-Inversa", "Victor Venites"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
blue = "^0.9.1"
ruff = "^0.0.284"
isort = "^5.12.0"

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/VictorVenites/Radial-Basis-Function"
